# GeoAware

./: .cache.sqlite  .env.example  .gitignore  COMPLETION_REPORT.txt  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  PROJECT_SUMMARY.txt  README.md  Report.txt  STATUS_REPORT.txt  UI.html  __init__.py  air_quality.py  air_quality_client.py  app.py  config.py  data_generation.py  demo.py  docker-compose.yml  groq_client.py  how_to_run.txt  json.txt  main.py  ml_pipeline.py  model_generation.ipynb  models.py  package-lock.json  pyproject.toml  readme3.md  requirements.txt  saransh.txt  service.py  setup.py  spatial_utils.py  state.py  test_api.py  testing.ipynb  train_model.py
Mosdac_ml_model/: .env.example  .gitignore  app.py  config.json  requirements.txt
Wris_flood_model/: .gitignore  README.md  report.txt  requirements.txt  run.py  states.txt
api/: __init__.py  advisory.py  routes.py  schemas.py
backend/: .env.example  package-lock.json  package.json  server.js  testEmail.js
data/: Final_data.csv  hazard_data.csv
flood/: config.py  main.py
flood_navigation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
frontend/: .env.example  index.html  package-lock.json  package.json
hazard/: __init__.py  forecast_processor.py  hazard_layer.py
ml/: __init__.py  features.py  model_predict.py  model_training.py  predict.py  preprocess.py  train_model.py  visualizations.py
models/: cyclone_model.ipynb  earthquake_model.ipynb  flood_model.ipynb  flood_risk_model.pkl  forestfire_model.ipynb  scaler.pkl
routers/: predict.py  seismic.py  trends.py  weather.py
(+143 files in other folders)
