[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flood-navigation"
version = "0.1.0"
description = "Flood Route Safety Navigator"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["api", "hazard", "ml", "routing", "scripts"]
